static/goscope/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import '~highlight.js/styles/darcula.css';

:root {
  --links: #7CC3BF;
}
@media (prefers-color-scheme: light) {
  :root{
    --links: #6CA8A5;
  }
}

.text-center{
  text-align: center;
}
.text-right {
  text-align: right;
}

code {
  font-family: 'Fira Mono', monospace;
}

.badge-success {
  padding: 4px;
  border-radius: 4px;
  color: #fff;
  background-color: #1f9d55;
}

.badge-info {
  padding: 4px;
  border-radius: 4px;
  color: #fff;
  background-color: #1c3d5a;
}

.badge-turq {
  padding: 4px;
  border-radius: 4px;
  color: #fff;
  background-color: #503194;
}

.badge-secondary {
  border-radius: 4px;
  padding: 4px;
  color: #fff;
  background-color: #494444;
}

.badge-danger {
  border-radius: 4px;
  padding: 4px;
  color: #fff;
  background-color: #621b18;
}

.badge-warning {
  border-radius: 4px;
  padding: 4px;
  color: #fff;
  background-color: #684f1d;
}

.svg-icon {
  fill: var(--text-main);
}
button:hover,
a:hover {
  & .svg-icon {
    fill: var(--links) !important;
  }
}

